# langchain-rdf

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
notebooks/: rag_ontology.ipynb  rag_sparql.ipynb
src/langchain_rdf/: __init__.py  ontology_loader.py  sparql_examples_loader.py
tests/: __init__.py  langchain_rag.ipynb  rag_ontology.ipynb  test_langchain_rdf.py
